# Bodge

./: .dockerignore  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
data/graphics/: credits_art.qoi  icon.qoi  logo_ball.qoi  logo_overlay.qoi  logo_text.qoi
data/localization/: en.loc  en.txt  hr.loc  hr.txt
include/: audio.hpp  blur_renderer.hpp  engine.hpp  font_manager.hpp  fonts.hpp  game.hpp  gamemode.hpp  global.hpp  graphics.hpp  input.hpp  legacy_formats.hpp  localization.hpp  renderer.hpp  replay.hpp  score.hpp  settings.hpp  state.hpp  system.hpp  text_engine.hpp  time.hpp  timer.hpp  tooltip.hpp  tooltip_manager.hpp  tooltip_renderer.hpp  ui.hpp
include/game/: ball.hpp  game.hpp  life_fragment.hpp  player.hpp  trail.hpp
include/graphics/: blur_renderer.hpp  graphics.hpp  tooltip_manager.hpp
include/renderer/: blur_renderer.hpp  text_engine.hpp  tooltip_manager.hpp
include/state/: ball_settings_editor_state.hpp  credits_state.hpp  game_over_state.hpp  game_state.hpp  gamemode_designer_state.hpp  name_entry_state.hpp  pause_state.hpp  player_settings_editor_state.hpp  replay_pause_state.hpp  replay_state.hpp  replays_state.hpp  save_replay_state.hpp  save_score_state.hpp  scoreboards_state.hpp  scores_state.hpp  settings_state.hpp  start_game_state.hpp  state.hpp  state_base.hpp  title_state.hpp
include/ui/: interpolated.hpp  interpolator.hpp  line_input_widget_impl.hpp  multiline_input_widget_impl.hpp  non_text_widgets.hpp  numeric_arrow_widget_impl.hpp  numeric_input_widget_impl.hpp  text_input_widget_impl.hpp  tweening.hpp  ui_manager.hpp  widget.hpp  widget_base.hpp  widget_impl.hpp
linux/: Dockerfile  build_script.sh  instructions.txt
metadata/: copyright.txt  file_format_versions.txt  logo.pdn  readme.txt
src/: audio.cpp  blur_renderer.cpp  engine.cpp  font_manager.cpp  fonts.cpp  game.cpp  gamemode.cpp  global.cpp  graphics.cpp  input.cpp  legacy_formats.cpp  localization.cpp  main.cpp  renderer.cpp  replay.cpp  score.cpp  settings.cpp  state.cpp  system.cpp  text_engine.cpp  tooltip.cpp  tooltip_manager.cpp  tooltip_renderer.cpp  ui.cpp
src/game/: ball.cpp  game.cpp  life_fragment.cpp  player.cpp  trail.cpp
src/graphics/: blur_renderer.cpp  graphics.cpp  tooltip_manager.cpp
src/renderer/: blur_renderer.cpp  text_engine.cpp  tooltip_manager.cpp
src/state/: ball_settings_editor_state.cpp  credits_state.cpp  game_over_state.cpp  game_state.cpp  gamemode_designer_state.cpp  gamemode_editor_state.cpp  gamemode_manager_state.cpp  gamemode_selector_state.cpp  name_entry_state.cpp  pause_state.cpp  player_settings_editor_state.cpp  replay_pause_state.cpp  replay_state.cpp  replays_state.cpp  save_replay_state.cpp  save_score_state.cpp  scoreboard_selection_state.cpp  scoreboard_state.cpp  scoreboards_state.cpp  scores_state.cpp  settings_state.cpp  start_game_state.cpp  state.cpp  state_base.cpp  title_state.cpp
src/ui/: arrow_widget.cpp  color_preview_widget.cpp  gamemode_widget.cpp  image_widget.cpp  interpolated.cpp  label_widget.cpp  non_text_widgets.cpp  player_skin_preview_widget.cpp  replay_playback_indicator_widget.cpp  replay_score_widget.cpp  text_button_widget.cpp  tweening.cpp  ui_manager.cpp  widget.cpp  widget_base.cpp
userdir/: log.txt
userdir/replays/: replay(0).rpy  replay(1).rpy  replay.rpy
